# codex

./: .gitignore  AGENTS.md  pnpm-lock.yaml  pnpm-workspace.yaml  subagents.md  tools.md
.codex/agents/: code-reviewer.md  commit-agent.md
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
codex-cli/: package.json  tsconfig.json
codex-cli/scripts/: dev_build.mjs
codex-cli/src/: index.ts
codex-cli/tests/: README.md  agents_cli.contract.test.ts  hooks_cli.contract.test.ts  hooks_exec_log.integration.test.ts  hooks_list.snapshot.test.ts
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/common/: Cargo.toml
codex-rs/common/src/: config_override.rs  lib.rs
codex-rs/common/src/hooks/: decision.rs  definition.rs  execution_record.rs  matchers.rs  mod.rs  payload.rs  scope.rs
codex-rs/common/tests/: hook_matchers.rs
codex-rs/core/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/slash-commands/: Cargo.toml
codex-rs/slash-commands/src/: command_line.rs  config.rs  discovery.rs  errors.rs  interpolation.rs  lib.rs  namespace.rs  parsing.rs  performance.rs  registry.rs
codex-rs/slash-commands/src/models/: command.rs  context.rs  metadata.rs  mod.rs  scope.rs
codex-rs/slash-commands/tests/: test_command_line.rs  test_e2e.rs  test_integration.rs  test_interpolation.rs  test_parsing.rs  test_registry.rs  test_security.rs
codex-rs/tui/: Cargo.toml
docs/: config.md  getting-started.md  hooks.md  plan_mode.md  subagents-tool.md  subagents.md
(+155 files in other folders)
