[package]
edition = "2024"
name = "codex-common"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"], optional = true }
codex-core = { path = "../core" }
codex-protocol = { path = "../protocol" }
regex = "1.11.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.9", optional = true }
wildmatch = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "toml"]
elapsed = []
sandbox_summary = []
