[package]
name = "codex-slash-commands"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
textwrap = "0.16"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
shlex = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
